--- a/stage.html
+++ b/stage.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Test</title>
+  <title>My color pencils box</title>
   <link rel="stylesheet" href="css/stage.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 </head>
@@ -13,12 +13,13 @@
   <div id="main">
     <div id="level-block">LEVEL <t id='level'>1</t><br><t id='dim'>2x2</t></div>
     <div id="game-block">
+      <div id="counter"></div>
       <div id="game"></div>
     </div>
     <div id="result">
       <div id="stat-box">
-        <span id="stat">Moves <t id='clicks'>0</t></span>
-        <span id="stat">Time <t id='time'>0</t></span>
+        <span id="stat">Moves <br><t id='clicks'>0</t></span>
+        <span id="stat">Time <br><t id='time'>0</t></span>
       </div>
       <div id="records">
         <div id="rec2" class="rec"><div class="lvl">2x2</div></div>
