--- a/index.html
+++ b/index.html
@@ -11,16 +11,21 @@
 
 <body>
   <div class="main-menu">
-    <img id="logo" srcset="img/logo_v1.svg">
+    <img id="logo" srcset="img/logo_v3.svg">
     <div id="play-button" onclick="play()">
       <a href="stage.html">
         <img id="play-svg" srcset="img/play.svg">
         <p>Let's Play</p>
       </a>
     </div>
-    <div id="about-button">
+    <div id="button-component">
+      <a href="howto.html">
+        How to play
+      </a>
+    </div>
+    <div id="button-component">
       <a href="about.html">
-        About
+        About Color
       </a>
     </div>
   </div>
