--- a/stage.html
+++ b/stage.html
@@ -31,6 +31,12 @@
       </div>
     </div>
   </div>
+  <div id="back-button">
+    <a href="index.html">
+      <img id="arrow-svg" srcset="img/arrow-left.svg">
+      back
+    </a>
+  </div>
   <img id="background" src="img/pen_v2.png">
 </body>
 
