--- a/stage.html
+++ b/stage.html
@@ -30,6 +30,7 @@
         <div id="rec7" class="rec"><div class="lvl">7x7</div></div>
       </div>
     </div>
+    <div class="sharethis-inline-share-buttons"></div>
   </div>
   <div id="back-button">
     <a href="index.html">
@@ -41,5 +42,6 @@
 </body>
 
 <script src="js/script.js"></script>
+<script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5eb717bbc155b9001af9bfb2&product=inline-share-buttons&cms=sop' async='async'></script>
 
 </html>
