--- a/howto.html
+++ b/howto.html
@@ -12,6 +12,7 @@
 
 <body>
   <div class="main">
+    <img id="logo" srcset="img/logo_v3.svg">
     <h2>How to play</h2>
     <ol>
       <li>รอเวลานับถอยหลัง 3 วินาที</li>
