--- a/stage.html
+++ b/stage.html
@@ -22,6 +22,7 @@
         <span id="stat">Moves <br><t id='clicks'>0</t></span>
         <span id="stat">Time <br><t id='time'>0</t></span>
       </div>
+      <div class="sharethis-inline-share-buttons"></div>
       <div id="records">
         <div id="rec2" class="rec"><div class="lvl">2x2</div></div>
         <div id="rec3" class="rec"><div class="lvl">3x3</div></div>
