--- a/howto.html
+++ b/howto.html
@@ -6,25 +6,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>How to play</title>
   <link rel="stylesheet" href="css/about.css">
-  <link href="https://fonts.googleapis.com/css?family=Margarine&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Mali&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <div class="main">
     <img id="logo" srcset="img/logo_v3.svg">
-    <h2>How to play</h2>
-    <ol>
-      <li>รอเวลานับถอยหลัง 3 วินาที</li>
-      <li>คลิกเพื่อสลับช่องสีให้ถูกต้องตามหลักการของ Brightness สี โดยการจัดเรียงตามแนวนอน</li>
-      <li>กดสลับ โดยใช้จำนวนครั้งน้อยที่สุด และเวลาน้อยที่สุด</li>
-      <li>ฝึกฝนให้เชี่ยวชาญ แล้วก็อย่าลืมท้าทายเพื่อนๆมาเล่นด้วยกัน</li>
-    </ol>
-
-    <p>
-      My color pencils เป็นเกมที่ฝึกฝนทักษะการเเยก Brightness ของสี  โดยที่ Brightness หรือ value คือค่าที่แสดงความสว่างหรือทึบของสี การปรับค่า brightness อาจกล่าวได้อีกอย่างว่าเป็นการผสมสีขาวหรือสีดำเข้าไปเพิ่มหรือลดความสว่างให้กับสี โดยที่สีขาวคือสีที่มี brightness สูงที่สุดและสีดำก็เป็นสีที่มีค่า brightness ต่ำที่สุด ส่วนสีอื่นๆ จะมีความสว่างและทึบ หรือสีขาวและดำผสมกันตามอัตราส่วนต่างๆ เช่น สีชมพู มีสีขาวปนอยู่มากกว่าสีแดง (ทำให้สีชมพูมีค่า brightness สูงกว่าสีแดง) และสีแดงมีค่า brightness ที่สูงกว่าสีน้ำตาล 
-      การจะมีกล่องดินสอสีที่อลังการสุดในห้อง มาพร้อมกับกล่องดินสอสีใหญ่ขึ้น จำนวนค่าสี การไล่ของเฉดสี จะมากขึ้นตามไปด้วย  ก็ต้องมาพร้อมกันกับภาระอันยิ่งใหญ่ ในการจัดเรียงสีให้สวยงามตามเเบบเดิม อีกทั้งยังเอาเทคนิคสีนี้ไปพัฒนางานต่างๆได้อีกมากมาย
-    </p>
+    <h1>How to play</h1>
+    <div id="col-block">
+      <ol>
+        <li>รอเวลานับถอยหลัง 3 วินาที</li>
+        <li>คลิกเพื่อสลับช่องสีให้ถูกต้องตามหลักการของ Brightness สี โดยการจัดเรียงตามแนวนอน</li>
+        <li>กดสลับ โดยใช้จำนวนครั้งน้อยที่สุด และเวลาน้อยที่สุด</li>
+        <li>ฝึกฝนให้เชี่ยวชาญ แล้วก็อย่าลืมท้าทายเพื่อนๆมาเล่นด้วยกัน</li>
+      </ol>
+      <br>
+      <p style="text-indent: 2.5em;">
+        My color pencils เป็นเกมที่ฝึกฝนทักษะการเเยก Brightness ของสี  โดยที่ Brightness หรือ value คือค่าที่แสดงความสว่างหรือทึบของสี การปรับค่า brightness อาจกล่าวได้อีกอย่างว่าเป็นการผสมสีขาวหรือสีดำเข้าไปเพิ่มหรือลดความสว่างให้กับสี โดยที่สีขาวคือสีที่มี brightness สูงที่สุดและสีดำก็เป็นสีที่มีค่า brightness ต่ำที่สุด ส่วนสีอื่นๆ จะมีความสว่างและทึบ หรือสีขาวและดำผสมกันตามอัตราส่วนต่างๆ เช่น สีชมพู มีสีขาวปนอยู่มากกว่าสีแดง (ทำให้สีชมพูมีค่า brightness สูงกว่าสีแดง) และสีแดงมีค่า brightness ที่สูงกว่าสีน้ำตาล 
+        การจะมีกล่องดินสอสีที่อลังการสุดในห้อง มาพร้อมกับกล่องดินสอสีใหญ่ขึ้น จำนวนค่าสี การไล่ของเฉดสี จะมากขึ้นตามไปด้วย  ก็ต้องมาพร้อมกันกับภาระอันยิ่งใหญ่ ในการจัดเรียงสีให้สวยงามตามเเบบเดิม อีกทั้งยังเอาเทคนิคสีนี้ไปพัฒนางานต่างๆได้อีกมากมาย
+      </p>
+      <br>
+      <img id="col" src="img/color.jpg">
+    </div>
   </div>
 
   <div id="back-button">
