--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>My color pencils box</title>
   <link rel="stylesheet" href="css/main.css">
-  <link href="https://fonts.googleapis.com/css?family=Margarine&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Mali&wght@0,400;1,600&display=swap" rel="stylesheet">
 </head>
 
 <body>
