--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>My color pencils box</title>
   <link rel="stylesheet" href="css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Mali&wght@0,400;1,600&display=swap" rel="stylesheet">
+  <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5eb717bbc155b9001af9bfb2&product=inline-share-buttons&cms=sop' async='async'></script>
 </head>
 
 <body>
@@ -28,6 +29,8 @@
         About Color
       </a>
     </div>
+    <br>
+    <div class="sharethis-inline-share-buttons"></div>
   </div>
   <img id="background" src="img/pen_v2.png">
 </body>
