--- a/howto.html
+++ b/howto.html
@@ -8,12 +8,13 @@
   <link rel="stylesheet" href="css/about.css">
   <link href="https://fonts.googleapis.com/css?family=Mali&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+  <link rel="shortcut icon" type="image/svg" href="img/favicon.svg">
 </head>
 
 <body>
   <div class="main">
     <img id="logo" srcset="img/logo_v3.svg">
-    <h1>How to play</h1>
+    <h1><b><u>How to play</u></b></h1>
     <div id="col-block">
       <ol>
         <li>รอเวลานับถอยหลัง 3 วินาที</li>
@@ -34,7 +35,7 @@
   <div id="back-button">
     <a href="index.html">
       <img id="arrow-svg" srcset="img/arrow-left.svg">
-      back
+        Back
     </a>
   </div>
   <img id="background" src="img/pen_v2.png">
@@ -44,3 +45,14 @@
 <script src="js/script.js"></script>
 
 </html>
+
+<!-- 1. letter-spacing : กำหนดระยะห่างระหว่างตัวอักษร
+2. word-spacing : กำหนดระยะห่างระหว่างคำ
+3. text-indent : เป็นการย่อหน้าหรือเว้นว่างหน้าข้อความ
+4. text-align : จัดให้ชิดซ้าย ขวา หรือวางตรงกลางข้อความ
+5. text-decoration : ตกแต่งให้มีขีดเส้นใต้ เหนือ หรือตรงกลางข้อความ
+6. text-transform : Capitalized Text แปลงให้เป็นตัวพิมพ์เล็ก หรือตัวพิมพ์ใหญ่
+7. white-space : ควบคุมลักษณะการพิมพ์ตัวอักษร
+เวลาใช้งานกับไฟล์ .CSS 
+รูปแบบที่เรียกเป็น class="  " จึงเติม . ก่อนชื่อ class เช่น .text{  }
+รูปแบบที่เรียกเป็น id="  " จึงเติม # ก่อนชื่อ id  เช่น #text{  }-->
