--- a/index.html
+++ b/index.html
@@ -4,34 +4,46 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>My color pencils box</title>
+  <title>My color pencils </title>
   <link rel="stylesheet" href="css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Mali&wght@0,400;1,600&display=swap" rel="stylesheet">
+  <link rel="shortcut icon" type="image/svg" href="img/favicon.svg">
   <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5eb717bbc155b9001af9bfb2&product=inline-share-buttons&cms=sop' async='async'></script>
 </head>
 
 <body>
   <div class="main-menu">
     <img id="logo" srcset="img/logo_v3.svg">
+
     <div id="play-button" onclick="play()">
       <a href="stage.html">
         <img id="play-svg" srcset="img/play.svg">
         <p>Let's Play</p>
       </a>
     </div>
+
     <div id="button-component">
       <a href="howto.html">
         How to play
       </a>
     </div>
+
     <div id="button-component">
       <a href="about.html">
         About Color
       </a>
     </div>
     <br>
+
+<!-- Plug in 
+      1.Facebook
+      2.Twitter
+      3.Line
+      4.Mail-           -->
     <div class="sharethis-inline-share-buttons"></div>
+
   </div>
+
   <img id="background" src="img/pen_v2.png">
 </body>
 
