--- a/stage.html
+++ b/stage.html
@@ -16,6 +16,8 @@
 
     <div id="level-block">LEVEL <t id='level'>1</t><br>
                                 <t id='dim'>2x2</t></div>
+
+    <div id="play-again">PLAY AGAIN</div> 
     <div id="game-block">
       <div id="counter"></div>
       <div id="game"></div>
